# hospital

./: .gitignore  Experiment.ipynb  README.md  geo_hbd.py  geo_hbd_nonproc.py  geo_preproc.py  geo_test.py  main.py  main_v.py  pyproject.toml  res_show.py
